<resources>
    <string name="app_name">DM_Assignment1</string>

    <!-- radio button labels / output strings -->
    <string name="rock">Rock</string>
    <string name="paper">Paper</string>
    <string name="scissor">Scissor</string>

    <!-- urgent / not urgent -->
    <string name="urgent">Urgent</string>
    <string name="not_urgent">Not Urgent</string>

    <string name="select_message">Select a message</string>
    <string name="message_label">Computer Picked</string>
    <string name="undefined">Undefined</string>

    <!-- the button labels -->
    <string name="send">Play</string>
    <string name="close">Play Again</string>

    <!-- the activity labels -->
    <string name="input_activity">Input Activity</string>
    <string name="output_activity">Output Activity</string>

    <!-- the floating label -->
    <string name="sheridan">Sheridan, 2020</string>
</resources>