<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:theme="@style/InputTheme"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              tools:context=".InputActivity">

    <TextView
            android:id="@+id/input_activity_label"
            style="@style/activity_label"
            android:text="@string/input_activity" />

    <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_message"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


    <RadioGroup
            android:id="@+id/message_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/gap0"

            android:checkedButton="@+id/play_button">

        <RadioButton
                android:id="@+id/rdbtn_rock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rock" />

        <RadioButton
                android:id="@+id/rdbtn_paper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/paper" />

        <RadioButton
                android:id="@+id/rdbtn_scissor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/scissor" />

    </RadioGroup>

    <Button
            android:id="@+id/send_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/gap2"
            android:text="@string/send" />

    <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

    <TextView
            android:id="@+id/sheridan"
            android:text="@string/sheridan"
            style="@style/sheridan_label" />
</LinearLayout>